force-app/main/default/objects/JBCXM__CustomerInstances__c/JBCXM__CustomerInstances__c.object-meta.xml
<CustomObject>
    <label>CustomerInstances</label>
    <nameField>
        <label>InstanceId</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomerInstances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>