force-app/main/default/objects/JBCXM__CustomerInstances__c/fields/JBCXM__CustomerInfo__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CustomerInfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CustomerInfo</label>
    <referenceTo>JBCXM__CustomerInfo__c</referenceTo>
    <relationshipLabel>CustomerInstances</relationshipLabel>
    <relationshipName>CustomerInstances</relationshipName>
    <type>Lookup</type>
</CustomField>