force-app/main/default/objects/JBCXM__CustomerInstances__c/fields/JBCXM__InstanceName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__InstanceName__c</fullName>
    <label>InstanceName</label>
    <length>120</length>
    <type>Text</type>
</CustomField>